Added home page editing

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,6 +7,24 @@ backend:
   repo: remotesynth/apexetiquette
   open_authoring: true
 collections:
+  - name: pages
+    label: Pages
+    files:
+      - name: "home"    
+        label: "Home Page"
+        file: "content/_index.md"
+        fields:
+            - widget: string
+              name: title
+              label: Title
+              required: true
+              hint: >-
+                The title of the page
+            - widget: markdown
+              name: body
+              label: Content
+              required: true
+              hint: Page content
   - name: docs
     label: Docs
     folder: /content/docs
